- Support select with multiple attribute for plural associations using :select form_ui, instead of checkboxes, using {html_options: {multiple: true}}, or :select_multiple
- Support attributes= in column, to set multiple settings with a hash
- Fix update_columns in type column of polymorphic association, when foreign key has value, it will look for old id with new type and may fail

= 3.7.0
- Drop support for rails < 5.2 and ruby < 2.5
- Support adding settings for chosen and tinyMCE in initializer (ActiveScaffold.js_config) or JavaScript code (ActiveScaffold.config, needed for callbacks)
- Support ruby 3.0 and 3.1
- Check action link security method in process_action_link_action with no id
- Add thumbnail_variant setting to ActiveStorage bridge
- Support Postgres citext column type
- Fix date picker bridge for ruby >= 2.7
- Fix keeping_errors for rails >= 6.1
- Fix usage of field_error_proc on record_select bridge for rails 7
- Support TinyMCE 6
- Add hide_form_column_if to columns
- Re-enable form which is sent to iframe when response is received, e.g. if form is downloading a file
- Use hash order for bitfields value instead of bit order, so options can be re-ordered as `2**1 => opt1, 2**0 => opt0, 2**2 => opt2`
- Remove delayed_setup, as it didn't work since rails 5.2
- Support Turbo
- Fix detecting when form submit to iframe has ended, for downloads too (using cookie)
- Fix list deleted records on nested listings using JSON column or serializer in PaperTrail versions table
- Support procs in description of columns, passing record, column, and scope to the proc
- Fix displaying errors in forms in rails 7.1
- Support for mongoid 7
- Support update_columns in field_search, so cascading behaviour is available to field search as in create or update forms
- Support floating footer in field_search, create and update, so footer may float to keep it visible when form is too long to fit
- Support hide/show link in form columns with option :collapsible